# bashbot

./: .gitignore  README.md  bashbot.ipynb  bashbot.py  commands.txt  distrobox_params.txt  pyproject.toml  requirements.txt  requirements_macos.txt  scene.txt
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: bashbot2-checkpoint.ipynb
data/: !.tldr.txt  7z.tldr.txt  FileCheck.tldr.txt  [.tldr.txt  [[.tldr.txt  ]].tldr.txt  a2ping.tldr.txt  accessdb.txt  aclocal-1.18.txt  acpi_listen.tldr.txt  acyclic.txt  addpart.tldr.txt  addpart.txt  addr2line.txt  adduser.tldr.txt  adig.tldr.txt  agetty.tldr.txt  agetty.txt  ahost.tldr.txt  alias.tldr.txt  alsamixer.tldr.txt  alternatives.tldr.txt  alternatives.txt  amixer.tldr.txt  aplay.tldr.txt  apropos.mandoc.txt  apropos.tldr.txt  apropos.txt  ar.txt  arch.tldr.txt  arch.txt  arecord.tldr.txt  ark.tldr.txt  arpaname.tldr.txt  arping.tldr.txt  arping.txt  arptables.tldr.txt  as.txt  audit2allow.tldr.txt  audit2why.tldr.txt  (+1864 more)
images/: architecture.odg
notebooks/: bashbot.ipynb  documents.ipynb  documents.py  gpu_check.ipynb  loader.py  retriever.py  vectorstore.py
scripts/: bashbot.py  documents.py  documents_orig.ipynb  embeddings.py  loader.py  ollama_test.py  vectorstore.py
test/: linux_QA_300.txt  test_questions.json
